--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.RMI_Interface.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +60,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.RMI_Interface=../RMI_Interface
+reference.RMI_Interface.jar=${project.RMI_Interface}/dist/RMI_Interface.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
